{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 145,
  "lineage": "db081070-823b-750d-f569-6ef7b5eba381",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:internet-gateway/igw-0159127fbed4455ec",
            "id": "igw-0159127fbed4455ec",
            "owner_id": "590600599952",
            "tags": {
              "Name": "VPC IGW"
            },
            "tags_all": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "non-web-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:route-table/rtb-0a9b15ea0f37370ae",
            "id": "rtb-0a9b15ea0f37370ae",
            "owner_id": "590600599952",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "tags_all": {
              "Name": "Public Subnet RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:route-table/rtb-0dcad49e8cdb45823",
            "id": "rtb-0dcad49e8cdb45823",
            "owner_id": "590600599952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0159127fbed4455ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "tags_all": {
              "Name": "Public Subnet RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac744df62fd153c",
            "route_table_id": "rtb-0a9b15ea0f37370ae",
            "subnet_id": "subnet-0513ff736afdd8861"
          },
          "dependencies": [
            "aws_route_table.non-web-private-rt",
            "aws_subnet.private-subnet3",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008df462552a0c888",
            "route_table_id": "rtb-0a9b15ea0f37370ae",
            "subnet_id": "subnet-0f3df91224e50fde4"
          },
          "dependencies": [
            "aws_route_table.non-web-private-rt",
            "aws_subnet.private-subnet4",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000bd28b3495587f2",
            "route_table_id": "rtb-0dcad49e8cdb45823",
            "subnet_id": "subnet-05bbf31108a957ee9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afb74c05ef416800",
            "route_table_id": "rtb-0dcad49e8cdb45823",
            "subnet_id": "subnet-0e9a689e7fae0b471"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:security-group/sg-0067891ea1dd552d1",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0067891ea1dd552d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_test_web",
            "name_prefix": "",
            "owner_id": "590600599952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Builder": "Dennis Ogunfiditimi",
              "Name": "DB SG"
            },
            "tags_all": {
              "Builder": "Dennis Ogunfiditimi",
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:security-group/sg-02fd67af0b8bb6acd",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fd67af0b8bb6acd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": "",
            "owner_id": "590600599952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "tags_all": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:subnet/subnet-0513ff736afdd8861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0513ff736afdd8861",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590600599952",
            "tags": {
              "Name": "Database Private Subnet3"
            },
            "tags_all": {
              "Name": "Database Private Subnet3"
            },
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:subnet/subnet-0f3df91224e50fde4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f3df91224e50fde4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590600599952",
            "tags": {
              "Name": "Database Private Subnet4"
            },
            "tags_all": {
              "Name": "Database Private Subnet4"
            },
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:subnet/subnet-05bbf31108a957ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05bbf31108a957ee9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590600599952",
            "tags": {
              "Name": "Web Public Subnet1"
            },
            "tags_all": {
              "Name": "Web Public Subnet1"
            },
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:subnet/subnet-0e9a689e7fae0b471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e9a689e7fae0b471",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590600599952",
            "tags": {
              "Name": "Web Public Subnet2"
            },
            "tags_all": {
              "Name": "Web Public Subnet2"
            },
            "vpc_id": "vpc-0cbe03548fb939b05"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590600599952:vpc/vpc-0cbe03548fb939b05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00806328bf747ef58",
            "default_route_table_id": "rtb-05fb24bf1f318e8c6",
            "default_security_group_id": "sg-0d8fb31da4dac7b3a",
            "dhcp_options_id": "dopt-3b04f441",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cbe03548fb939b05",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fb24bf1f318e8c6",
            "owner_id": "590600599952",
            "tags": {
              "Name": "First Terraform VPC",
              "application": "test",
              "builder": "Dennis Ogunfiditimi"
            },
            "tags_all": {
              "Name": "First Terraform VPC",
              "application": "test",
              "builder": "Dennis Ogunfiditimi"
            }
          }
        }
      ]
    }
  ]
}